# KitchenDisplay

./: .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Callback.h  CardUI.cpp  CardUI.h  Device.cpp  Device.h  HomeUI.cpp  HomeUI.h  LvglUI.cpp  LvglUI.h  MarkdownRenderer.cpp  MarkdownRenderer.h  MarkdownTestUI.cpp  MarkdownTestUI.h  Messages.h  README.md  TrelloApi.cpp  TrelloApi.h  build.sh  clean.sh  debug.sh  fonts.h  includes.h  lv_conf.h  lv_font_icons_18.c  lv_font_mono_16.c  lv_font_mono_32.c  lv_font_roboto_100_digits.c  lv_font_roboto_14.c  lv_font_roboto_18.c  lv_font_roboto_40.c  lv_font_sans_18.c  lv_font_sans_18_bold.c  lv_font_sans_18_bold_italic.c  lv_font_sans_18_italic.c  lv_font_sans_22_bold.c  lv_font_sans_28_italic.c  (+21 more)
documentation/: Zero-DISP-7A - Waveshare Wiki.html
documentation/Zero-DISP-7A - Waveshare Wiki_files/: aAdkk0o(1).php
pipelines/: kitchendisplay.groovy
scripts/: build.sh
scripts/dockcross/: build.sh  crossbuild.sh
src/: Application.cpp  Application.h  CardUI.cpp  Device.cpp  HomeUI.cpp  HomeUI.h  LvglUI.cpp  LvglUI.h  MarkdownRenderer.cpp  MarkdownTestUI.h  Messages.h  TrelloApi.cpp  TrelloApi.h  includes.h  lv_conf.h  lv_font_mono_25.c  lv_font_sans_28.c  lv_font_sans_28_bold.c  lv_font_sans_28_bold_italic.c  lv_font_sans_28_italic.c  lv_font_sans_34_bold.c  lv_font_sans_40_bold.c  lv_font_sans_50_bold.c  lv_font_symbols.c  main.cpp  settings.h
support/: kitchendisplay.service
tools/: generate-fonts.json  generate-fonts.sh  generate-fonts.ts  generate-fonts.yaml  package-lock.json  pnpm-lock.yaml
tools/linux/: README.md
